--- a/signup.html
+++ b/signup.html
@@ -46,13 +46,7 @@
           class="form-control mt-3"
         />
         <div class="text-danger mt-2 d-none" id="passwordAlert">
-          <ul class="list-unstyled">
-            <li>At least one lowercase alphabet</li>
-            <li>At least one uppercase alphabet</li>
-            <li>At least one Numeric digit</li>
-            <li>At least one special character</li>
-            <li>Also, the total length must be in the range [8-15]</li>
-          </ul>
+          Incorrect password. Must be at least 8 characters with uppercase, number, and special character
         </div>
         <div class="text-danger mt-2 d-none" id="signupAlert1">
           All inputs is required
